# pipeme

./: .gitignore  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml
.github/lint/: pyproject.toml
core/agent/: agent.py  models.py  prompts.py  run.py  utils.py
core/bot/: bot.py  command.py  handler.py  menu.py  wrapper.py
core/scripts/embedding/: manager.py  model.py
core/scripts/psql/: client.py  manager.py  maps.py
core/scripts/qdrant/: base.py  client.py  manager.py
core/scripts/qdrant/async/: manager.py
core/scripts/qdrant/sync/: manager.py
core/scripts/tools/: checker.py  files.py
core/templates/bot/: button.py  command.py  message.py
data/qdrant/: raft_state.json
docs/examples/: embedding.py  search_trades.py
